[project]
name = "eigenpy"
version = "2.9.2"
description = "Bindings between Numpy and Eigen using Boost.Python"
readme = "README.md"
license= "BSD-2-Clause"
dependencies = ["cmeel-boost"]
requires-python = ">= 3.7"

[project.urls]
homepage = "https://github.com/stack-of-tasks/eigenpy"

[tool.cmeel]
build-number = 1

[build-system]
build-backend = "cmeel.build"
requires = ["cmeel[build]", "numpy", "cmeel-eigen", "cmeel-boost"]
