[project]
name = "eigenpy"
version = "3.0.0"
description = "Bindings between Numpy and Eigen using Boost.Python"
license= "BSD-2-Clause"
dependencies = ["cmeel-boost", "numpy"]
requires-python = ">= 3.7"

[project.urls]
homepage = "https://github.com/stack-of-tasks/eigenpy"

[tool.cmeel]
build-number = 1
run-tests = false

[build-system]
build-backend = "cmeel.build"
requires = ["cmeel[build]", "cmeel-eigen", "cmeel-boost", "numpy"]
