[build-system]
build-backend = "cmeel.build"
requires = ["cmeel-boost ~= 1.82.0", "cmeel-eigen", "cmeel[build]"]

[project]
dependencies = ["cmeel-boost ~= 1.82"]
description = "Bindings between Numpy and Eigen using Boost.Python"
license = "BSD-2-Clause"
name = "eigenpy"
requires-python = ">= 3.8"
version = "3.1.0"

[project.urls]
homepage = "https://github.com/stack-of-tasks/eigenpy"

[tool.cmeel]
build-number = 2
run-tests = false

[tool.tomlsort]
all = true
